--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 <body>
-    <nav id="topnav1" class="navbar">
-        <a href="index.html">Home</a>
-        <a href="Contact">Contact</a>
-    </nav>
+    <div class="background">
+        <nav id="topnav1" class="navbar">
+            <a href="index.html">Home</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+        <hr class="divider">
+</div>
 </body>
 </html>
