--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="src/style.css">
+    <style>
+
+    </style>
 </head>
 <body>
-    <div class="background">
-        <nav id="topnav1" class="navbar">
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-        <hr class="divider">
+<div class="background">
+    <nav id="topnav1" class="navbar">
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="tictactoe.html">Tic tac toe</a>
+    </nav>
+    <hr class="divider">
 </div>
 </body>
 </html>
