2 player TTT complete

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -12,6 +12,16 @@
             color: lightgrey
         }
 
+        h2 {
+            text-align: center;
+            font-size: 42px;
+            color: lightgray;
+        }
+
+        hr {
+            margin-bottom: 60px;
+        }
+
         button {
             display: block;
             margin: auto;
@@ -44,7 +54,8 @@
             <h2 id="status"></h2>
             <button id="restart">Restart</button>
         </div>
-        <script scr="index.js"></script>
+        <hr class="divider">
     </div>
+    <script src="src/tictactoe.js"></script>
 </body>
 </html>
