--- a/tictactoe.html
+++ b/tictactoe.html
@@ -41,7 +41,7 @@
         <div id="containGame">
             <div class="slidecontainer">
                 <p>Tic Tac Toe - <span id="difficultyTitle">2 Player</span></p>
-                <input type="range" min="1" max="3" value="1" id="difficultySlider" oninput="difficultyTitle.innerHTML=['2 Player','Randomiser', 'Placeholder - AI'][Number(this.value)-1];">
+                <input type="range" min="1" max="3" value="1" id="difficultySlider" oninput="difficultyTitle.innerHTML=['2 Player','Randomiser', 'Placeholder'][Number(this.value)-1];">
             </div>
             <h1 id="titleDifficulty"></h1>
             <div id="containCells">
