attempt at mobile fix

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="background">
-        <nav id="topnav1" class="navbar">
+        <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="contact.html">Contact</a>
             <a href="tictactoe.html">Tic tac toe</a>
